@@ -231,17 +231,19 @@ t3lib_extMgm::addToAllTCAtypes('be_users','tt_news_categorymounts;;;;1-1-1');
 
 
 if (TYPO3_MODE=='BE')	{
-	t3lib_extMgm::insertModuleFunction(
-		'web_info',
-		'tx_ttnewscatmanager_modfunc1',
-		t3lib_extMgm::extPath($_EXTKEY).'modfunc1/class.tx_ttnewscatmanager_modfunc1.php',
-		'LLL:EXT:tt_news/modfunc1/locallang.xml:moduleFunction.tx_ttnews_modfunc1'
-	);
+	if (t3lib_div::int_from_ver(TYPO3_version) >= 4000000) {
+		t3lib_extMgm::insertModuleFunction(
+			'web_info',
+			'tx_ttnewscatmanager_modfunc1',
+			t3lib_extMgm::extPath($_EXTKEY).'modfunc1/class.tx_ttnewscatmanager_modfunc1.php',
+			'LLL:EXT:tt_news/modfunc1/locallang.xml:moduleFunction.tx_ttnews_modfunc1'
+		);
 
-	$GLOBALS['TBE_MODULES_EXT']['xMOD_alt_clickmenu']['extendCMclasses'][]=array(
-		'name' => 'tx_ttnewscatmanager_cm1',
-		'path' => t3lib_extMgm::extPath($_EXTKEY).'modfunc1/class.tx_ttnewscatmanager_cm1.php'
-	);
+		$GLOBALS['TBE_MODULES_EXT']['xMOD_alt_clickmenu']['extendCMclasses'][]=array(
+			'name' => 'tx_ttnewscatmanager_cm1',
+			'path' => t3lib_extMgm::extPath($_EXTKEY).'modfunc1/class.tx_ttnewscatmanager_cm1.php'
+		);
+	}
 		// Adds a tt_news wizard icon to the content element wizard.
 	$TBE_MODULES_EXT['xMOD_db_new_content_el']['addElClasses']['tx_ttnews_wizicon'] = t3lib_extMgm::extPath($_EXTKEY).'pi/class.tx_ttnews_wizicon.php';
 		// add folder icon
