@@ -272,6 +272,7 @@ plugin.tt_news {
         10.field = title
         10.typolink.parameter = {$plugin.tt_news.singlePid}
         10.typolink.additionalParams.data=register:newsAddParams
+        10.typolink.useCacheHash = 1
         20 < plugin.tt_news.tmp.20
       }
 	# settings for related news, that point to internal pages
