@@ -1,3 +1,8 @@
+2007-02-09	Rupert Germann <rupi@gmx.li>
+
+	* fix for bug 4948: in TYPO3 4.1 a cHash error occured when links to related news were clicked (thx to Oliver Hader).
+	* fix: added a condition to ext_tables.php which disables the "tt_news category manager" module in TYPO versions below 4.0 (reason: the drag and drop code isn't present in this versions)
+
 2007-01-26	Rupert Germann <rupi@gmx.li>
 
 	* fix: the ajax category tree works correctly with different charsets now.
